# prettify-logging

./: README.md  requirements.txt  setup.cfg
src/PrettifyLogging/: .pylintrc  prettify_logging.py
