[metadata]
name = Prettify-Logging
version = 1.0.0
author = John J Kenny
author_email = johnjkenny88@gmail.com
description = Prettify-Logging is a wrapper tool that colors the stream formatting of the logging module.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/johnjkenny/Prettify-Logging
project_urls =
    Bug Tracker = https://github.com/johnjkenny/Prettify-Logging/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src
